fix video on mobile and smaller displays

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -32,13 +32,31 @@
 
 .carousel-control-next,
 .carousel-control-prev {
-    filter: invert(100%);
+  filter: invert(100%);
+}
+
+.video {
+  display: flex;
+  justify-content: center;
+  /* Center horizontally */
+  height: 100%;
+  align-items: center;
+  /* Center vertically if needed */
+}
+
+.video video {
+  width: 100%;
+  /* Make video width responsive */
+  max-width: 1113px;
+  /* Maximum width */
+  height: auto;
+  /* Maintain aspect ratio */
 }
 
 
-@media (max-width: 768px) { 
+@media (max-width: 768px) {
 
-  .home-section{
+  .home-section {
     padding: 20px;
     height: auto;
   }
